--- a/Frontend_Test.ui
+++ b/Frontend_Test.ui
@@ -17,7 +17,11 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Signal Equalizer</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>Assets/performance.png</normaloff>Assets/performance.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: #1e1e2f;
